[gd_scene load_steps=7 format=3 uid="uid://b5pgeiq6wwn7x"]

[ext_resource type="Script" path="res://Scripts/profile_view.gd" id="1_0g7d7"]
[ext_resource type="Theme" uid="uid://de8v2cdqc8x16" path="res://Themes/BigHeaderTheme.tres" id="1_h8h0o"]
[ext_resource type="Texture2D" uid="uid://dfaqnu57p8s40" path="res://Sprites/DogPics/husky2-1.jpg" id="3_5hx3t"]
[ext_resource type="Texture2D" uid="uid://t0cc7i4fsvh1" path="res://icon.svg" id="4_htdu4"]
[ext_resource type="Theme" uid="uid://brtq38ympa1w8" path="res://Themes/SmallHeaderTheme.tres" id="5_o150v"]
[ext_resource type="Theme" uid="uid://6hdp0kr0obht" path="res://Themes/BodyTheme.tres" id="6_ee2mv"]

[node name="ProfileView" type="Node2D"]
script = ExtResource("1_0g7d7")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme = ExtResource("1_h8h0o")
text = "PROFILE VIEW"

[node name="UserImageDisplay" type="ColorRect" parent="."]
offset_left = 57.0
offset_top = 112.0
offset_right = 525.0
offset_bottom = 558.0
color = Color(0, 0, 0, 1)

[node name="UserImage" type="TextureRect" parent="UserImageDisplay"]
offset_right = 423.0
offset_bottom = 462.0
texture = ExtResource("3_5hx3t")
expand_mode = 1
stretch_mode = 5

[node name="Prev" type="Button" parent="UserImageDisplay"]
offset_left = -27.0
offset_top = 168.0
offset_right = 109.0
offset_bottom = 304.0
icon = ExtResource("4_htdu4")

[node name="Next" type="Button" parent="UserImageDisplay"]
offset_left = 434.0
offset_top = 159.0
offset_right = 570.0
offset_bottom = 295.0
icon = ExtResource("4_htdu4")

[node name="About" type="ScrollContainer" parent="."]
offset_left = 22.0
offset_top = 584.0
offset_right = 30.0
offset_bottom = 592.0

[node name="VBoxContainer" type="VBoxContainer" parent="About"]
layout_mode = 2

[node name="Name" type="Label" parent="About/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_o150v")

[node name="About" type="Label" parent="About/VBoxContainer"]
layout_mode = 2
theme = ExtResource("6_ee2mv")

[connection signal="button_down" from="UserImageDisplay/Prev" to="." method="change_image" binds= [-1]]
[connection signal="button_down" from="UserImageDisplay/Next" to="." method="change_image" binds= [1]]
